@@ -26,10 +26,7 @@ public final class ClassInstanceCreationBoxedValueTypes extends ReplaceCurrentNo
     return "Use factory method " + hop.simpleName(¢.getType()) + ".valueOf() instead of new ";
   }
   @Override public Examples examples() {
-    return //
-    convert("new Integer(x)")//
-        .to("Integer.valueOf(x)")//
-    ;
+    return convert("new Integer(x)").to("Integer.valueOf(x)");
   }
   @Override public ASTNode replacement(final ClassInstanceCreation c) {
     final Expression e = the.onlyOneOf(arguments(c));
